Fixed hamburger alignment

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -34,6 +34,7 @@
 .hamburger {
 	font-size: 0;
 	margin-right: 0.5rem;
+	line-height: 1;
 
 	&::before {
 		font-size: 1.2rem;
